tests/parse_errors/one_row_more_instructions.src
.IPPcode18
LABEL test LABEL dalsi